--- a/comics/resources/sass/partials/_common.scss
+++ b/comics/resources/sass/partials/_common.scss
@@ -3,3 +3,12 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    width: 1170px;
+    margin: 0 auto;
+}
