--- a/comics/resources/sass/partials/_footer.scss
+++ b/comics/resources/sass/partials/_footer.scss
@@ -1,4 +1,46 @@
 #site_footer{
+    .links{
+        background-image: url(/images/footer-bg.jpg);
+        padding: 1.5rem 0;
+        .container{
+            .link_cols{
+                width: 50%;
+                display: flex;
+                justify-content: flex-start;             
+                .col{
+                    width: calc(100% / 3 - 1rem);
+                    margin-right: 1rem;
+                    h2{
+                        color: white;
+                        padding: 1rem 0;
+                    }
+                    ul{
+                        list-style: none;
+                        li{
+                            a{
+                                text-decoration: none;
+                                color: rgba(255, 255, 255, 0.6);
+                                line-height: 1.5rem;
+                                font-size: 0.8rem;
+                            }
+                        }
+                    }
+                }
+            }
+            .logo_bg{
+                width: 50%;
+            }
+            .rights{
+                margin-top: 1rem;
+                color: rgba(255, 255, 255, 0.6);
+                font-size: 0.8rem;
+                a{
+                    color: $brand_primary;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 
     .socials{
         background-color: $grey_bg;
