--- a/comics/resources/sass/partials/_footer.scss
+++ b/comics/resources/sass/partials/_footer.scss
@@ -1,15 +1,19 @@
 #site_footer{
     .links{
-        background-image: url(/images/footer-bg.jpg);
+        background-image: url(/images/dc-logo-bg.png), url(/images/footer-bg.jpg) ;
+        background-position: center right, center left;
+        background-repeat: no-repeat;
         padding: 1.5rem 0;
         .container{
+            display: flex;
+            justify-content: space-between;
             .link_cols{
-                width: 50%;
+                width: calc(100% / 2);
                 display: flex;
                 justify-content: flex-start;             
                 .col{
                     width: calc(100% / 3 - 1rem);
-                    margin-right: 1rem;
+                    padding-right: 1rem;
                     h2{
                         color: white;
                         padding: 1rem 0;
@@ -28,7 +32,10 @@
                 }
             }
             .logo_bg{
-                width: 50%;
+                width: calc(100% / 2);
+                img{
+                    width:50%;
+                }
             }
             .rights{
                 margin-top: 1rem;
