--- a/comics/public/css/app.css
+++ b/comics/public/css/app.css
@@ -16,39 +16,32 @@ body {
 #site_header .blue_bar {
   background-color: #0282F9;
 }
-
 #site_header .blue_bar .container {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
-
 #site_header .blue_bar .container a {
   color: white;
   text-decoration: none;
   font-size: 0.8rem;
   padding: 0.5rem 0 0.5rem 1rem;
 }
-
 #site_header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 0;
 }
-
 #site_header nav .logo img {
   height: 80px;
 }
-
 #site_header nav ul {
   list-style: none;
 }
-
 #site_header nav ul li {
   display: inline-block;
 }
-
 #site_header nav ul li a {
   text-decoration: none;
   text-transform: uppercase;
@@ -70,90 +63,73 @@ body {
   background-repeat: no-repeat;
   padding: 1.5rem 0;
 }
-
 #site_footer .links .container {
   display: flex;
   justify-content: space-between;
 }
-
 #site_footer .links .container .link_cols {
   width: calc(100% / 2);
   display: flex;
   justify-content: flex-start;
 }
-
 #site_footer .links .container .link_cols .col {
   width: calc(100% / 3 - 1rem);
   padding-right: 1rem;
 }
-
 #site_footer .links .container .link_cols .col h2 {
   color: white;
   padding: 1rem 0;
 }
-
 #site_footer .links .container .link_cols .col ul {
   list-style: none;
 }
-
 #site_footer .links .container .link_cols .col ul li a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
   line-height: 1.5rem;
   font-size: 0.8rem;
 }
-
 #site_footer .links .container .logo_bg {
   width: calc(100% / 2);
 }
-
 #site_footer .links .container .logo_bg img {
   width: 50%;
 }
-
 #site_footer .links .container .rights {
   margin-top: 1rem;
   color: rgba(255, 255, 255, 0.6);
   font-size: 0.8rem;
 }
-
 #site_footer .links .container .rights a {
   color: #0282F9;
   text-decoration: none;
 }
-
 #site_footer .socials {
   background-color: #303030;
   padding: 2rem 0;
 }
-
 #site_footer .socials .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
 #site_footer .socials .container .button {
   padding: 0.8rem;
   border: 1px solid #0282F9;
   text-decoration: none;
   color: white;
 }
-
 #site_footer .socials .container .social-links {
   display: flex;
   align-items: center;
 }
-
 #site_footer .socials .container .social-links a {
   padding: 0 0.5rem;
   text-decoration: none;
 }
-
 #site_footer .socials .container .social-links a:first-child {
   color: #0282F9;
 }
-
 #site_footer .socials .container .social-links a img {
   height: 25px;
 }
@@ -161,8 +137,8 @@ body {
 .series {
   background-color: #303030;
   color: white;
+  padding-bottom: 1rem;
 }
-
 .series .title {
   background-color: #0282F9;
   padding: 1rem;
@@ -170,34 +146,59 @@ body {
   text-decoration: none;
   text-transform: uppercase;
 }
-
 .series .cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 2rem;
 }
-
 .series .cards .card {
   margin: 0 0.7rem 1.5rem 0;
   width: 180px;
   text-transform: uppercase;
 }
-
 .series .cards .card h4 {
   font-size: 0.7rem;
   padding: 0.5rem 0;
 }
-
 .series .cards .card .card_img {
   width: 180px;
   height: 180px;
   overflow: hidden;
 }
-
 .series .cards .card .card_img img {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
+.series .load {
+  text-align: center;
+}
+.series .load a {
+  padding: 0.5rem 2rem;
+  background-color: #0282F9;
+  text-decoration: none;
+  color: white;
+  font-size: 0.8rem;
+}
 
+.shop-wrap {
+  background-color: #0282F9;
+  padding: 2rem 0;
+  color: white;
+}
+.shop-wrap .shop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.shop-wrap .shop .buy {
+  padding: 0 1.5rem;
+  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
+}
+.shop-wrap .shop .buy img {
+  margin-right: 0.7rem;
+  height: 40px;
+}
