--- a/comics/resources/sass/partials/_comic_show.scss
+++ b/comics/resources/sass/partials/_comic_show.scss
@@ -96,7 +96,7 @@
             .datas{
                 display: flex;
                 padding: 1rem 0;
-
+                border-bottom: 1px solid #DCDCDC;
                 .data_name{
                             width: 40%;
                 }
