--- a/comics/resources/sass/partials/_comic_show.scss
+++ b/comics/resources/sass/partials/_comic_show.scss
@@ -108,6 +108,25 @@
                     }
                 }
             }
+            .cards{
+                width: 100%;
+                margin-top: 6rem;
+                display: flex;
+                .card{
+                    width: calc(100% / 4);
+                    border: 1px solid #DCDCDC;
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 1rem;
+                    h4{
+                        color: #DCDCDC;
+                    }
+                    img{
+                        background-color: #dcdcdc;
+                        height: 60px;
+                    }
+                }
+            }
         }
     }
 }
